@startuml

title __PAYMENTINSTRUCTION's Class Diagram__\n

  package com.infosupport.poc.ddd.domain.entity {
    package com.infosupport.poc.ddd.domain.entity.paymentinstruction {
      class Amount {
          - value : BigDecimal
          - Amount()
          {static} ~ create()
          + getValue()
          - invalidAmount()
      }
    }
  }
  

  package com.infosupport.poc.ddd.domain.entity {
    package com.infosupport.poc.ddd.domain.entity.paymentinstruction {
      class BeneficiaryAccount {
          - beneficiaryAccountIdentification : String
          - beneficiaryAccountName : String
          - BeneficiaryAccount()
          {static} ~ create()
          + getBeneficiaryAccountIdentification()
          + getBeneficiaryAccountName()
      }
    }
  }
  

  package com.infosupport.poc.ddd.domain.entity {
    package com.infosupport.poc.ddd.domain.entity.paymentinstruction {
      class Fedwire {
          - value : String
          {static} - fedwirePattern : Pattern
          - Fedwire()
          {static} ~ create()
          + getValue()
      }
    }
  }
  

  package com.infosupport.poc.ddd.domain.entity {
    package com.infosupport.poc.ddd.domain.entity.paymentinstruction {
      class ManualBeneficiaryBank {
          - beneficiaryBankName : String
          - beneficiaryBankAddress : String
          - ManualBeneficiaryBank()
          {static} ~ create()
          + getBeneficiaryBankName()
          + getBeneficiaryBankAddress()
          + getBeneficiaryBankCountry()
      }
    }
  }
  

  package com.infosupport.poc.ddd.domain.entity {
    package com.infosupport.poc.ddd.domain.entity.paymentinstruction {
      class PaymentInstruction {
          - paymentInstructionID : Long
          - forwardDateTime : LocalDateTime
          + PaymentInstruction()
          + hasSameIdentityAs()
          + hasCurrencyUSD()
          + hasBankCountryUSA()
          + hasBankCountry()
          + hasBankName()
          + hasFedwire()
          - hasBeneficiaryBank()
          + getPaymentInstructionID()
          + getOrderingAccount()
          + getPaymentCurrency()
          + getAmount()
          + getFedwire()
          + getBeneficiaryBank()
          + getBeneficiaryAccount()
          + getForwardDateTime()
          + equals()
          + hashCode()
      }
    }
  }
  

  ManualBeneficiaryBank o-- Country : beneficiaryBankCountry
  PaymentInstruction -up-|> Entity
  PaymentInstruction o-- OrderingAccount : orderingAccount
  PaymentInstruction o-- Currency : paymentCurrency
  PaymentInstruction o-- BeneficiaryAccount : beneficiaryAccount
  PaymentInstruction o-- ManualBeneficiaryBank : beneficiaryBank
  PaymentInstruction o-- Fedwire : fedwire
  PaymentInstruction o-- Amount : amount
  PaymentInstruction o-- Tracer : tracer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
